Saving those combos
Combo inputting + saving to db functional

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,14 @@
         <activity
             android:name=".NewCombo"
             android:label="Combos"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".SavingCombo"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".SavingCombo"
+            android:label="Combos"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
     </application>
 
 </manifest>
