--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pierre.combos">
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -39,24 +39,33 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
-        <activity android:name=".NewNote"
+        <activity
+            android:name=".NewNote"
             android:label="Combos"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden">
 
         </activity>
-        <activity android:name=".MyNotes"
+        <activity
+            android:name=".MyNotes"
             android:label="Combos"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
-        <activity android:name=".NoteDetails"
+        <activity
+            android:name=".NoteDetails"
             android:label="Combos"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden">
 
         </activity>
-        <activity android:name=".About"
+        <activity
+            android:name=".About"
+            android:label="Combos"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity android:name=".ExportImport"
             android:label="Combos"
             android:theme="@style/AppTheme.NoActionBar">
 
